--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,12 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.circle {
+  background-color: aqua;
+  border-radius: 5px;
+  color: pink;
+  height: 100px;
+  width: 100px;
+  display: flex;
+}
