--- a/src/index.css
+++ b/src/index.css
@@ -1,77 +1,98 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
+  font-family: Helvetica, Arial, sans-serif;
+  background-image: url(snowfall.jpg);
   margin: 0;
-  display: flex;
+  display: grid;
   place-items: center;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 50vh;
+}
+h1 {
+  font-size: 60px;
+  font-weight: bolder;
+  margin: 8px;
+  text-align: center;
+  font-display: swap;
+  color: aquamarine;
+  font-size: 3.2em;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+h2 {
+  font-family: sans-serif;
+  font-style: oblique;
+  color: rgb(169, 119, 175);
+  align-items: center;
+  font-size: 50px;
+  margin: 8px;
+  margin-right: 8px;
+  text-align: center;
+  text-shadow: 2px 2px 10px #500546;
+}
+
+input {
+  background: linear-gradient(90deg, #e3ffe7 0%, hsl(218, 84%, 39%) 100%);
+  flex-direction: column;
+  justify-content: center;
+  display: flex;
+  margin-left: 550px;
+  padding: 10px 10px;
+  box-shadow: 0px 0px 10px #ff00b2, 0px 0px 10px #ff00f2 inset;
+  border: 2px solid #ff00b7;
+  height: 50px;
+  width: 150px;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+  background-color: rgb(160, 221, 232);
+  border-color: rgb(238, 186, 203);
+  border-radius: 30px;
+  width: 80px;
+  box-shadow: 0px 0px 10px #ff00f2, 0px 0px 10px #ff00f2 inset;
+  border: 2px solid #ff00b7;
 }
 button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  background-color: rgb(6, 72, 80);
+  cursor: pointer;
+  transform: rotatez(180deg);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+button {
+  padding: 5px 5px;
+  font-family: sans-serif;
+  border-radius: 5px;
+  margin: 1rem;
+}
+
+.circles {
+  display: flex;
+  border-radius: 20px;
+  justify-content: center;
+  padding: 2rem;
 }
 
 .circle {
-  background-color: aqua;
-  border-radius: 5px;
-  color: pink;
-  height: 100px;
-  width: 100px;
-  display: flex;
+  width: 150px;
+  height: 150px;
+  background-color: #fff;
+  cursor: pointer;
+  width: "50px";
+  height: "50px";
+  margin: "10px";
+  cursor: "pointer";
+  justify-content: center;
+  /*box-shadow: 0px 0px 10px #ff00f2, 0px 0px 10px #ff00f2 inset;
+  border: 2px solid #ff00b7;*/
+}
+.circle:hover {
+  transition: 0.6s ease-in-out;
+  border-radius: 50%;
 }
