--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,6 @@ h1 {
   text-align: center;
   font-display: swap;
   color: aquamarine;
-  font-size: 3.2em;
 }
 
 h2 {
@@ -36,6 +35,12 @@ h2 {
   margin-right: 8px;
   text-align: center;
   text-shadow: 2px 2px 10px #500546;
+}
+p {
+  font-family: sans-serif;
+  font-weight: 300;
+  font-size: 3.2em;
+  color: aquamarine;
 }
 
 input {
@@ -82,15 +87,16 @@ button {
 .circle {
   width: 150px;
   height: 150px;
-  background-color: #fff;
+  background-color: #19759d;
   cursor: pointer;
   width: "50px";
   height: "50px";
-  margin: "10px";
+  margin-left: "20px";
+  margin-right: 20px;
   cursor: "pointer";
   justify-content: center;
-  /*box-shadow: 0px 0px 10px #ff00f2, 0px 0px 10px #ff00f2 inset;
-  border: 2px solid #ff00b7;*/
+  box-shadow: 0px 0px 10px #ff00f2, 0px 0px 10px #ff00f2 inset;
+  border: 2px solid #ff00b7;
 }
 .circle:hover {
   transition: 0.6s ease-in-out;
