give style to circle

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ p {
   font-family: sans-serif;
   font-weight: 300;
   font-size: 3.2em;
-  color: aquamarine;
+  color: rgb(5, 90, 62);
 }
 
 input {
